Update store submission assets

--- a/Source/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche/todo.txt
+++ b/Source/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche/todo.txt
@@ -1,5 +1,3 @@
-﻿Legende (farbige Smilies)
-In Liste als auch Details Page Smiley einfügen
+﻿Historische Daten anzeigen
 
-Favoriten
-Historische Daten anzeigen
+Favoriten (?)
